Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.2.8:

* fix a corner case for cpy join spotted by TFKyle where length calculation
  was incorrect, leading to a trailing null slipping into the calculated
  path.

* fix bash parsing for a corner case for empty assigns; literally, 
  x=
  foo='dar'
  would incorrectly interpret x=foo, instead of x=''.


pkgcore 0.2.7:

* layman configuration (if available) is now read for portage configuration
  for sync URI for overlays.  tar syncer is currently unsupported; others may
  be buggy.  Feed back desired (author doesn't use layman).  Ticket #11.  If
  you want it disabled, add FEATURES=-layman-sync .

* another fix for daft tarballs that try to touch cwd.

pkgcore 0.2.6:

* make intersecting ~ and =* atoms work again (used by pquery --revdep)

* catch a corner case py2.5 bug where AttributeError bleeds through from
  generic_equality.

* Via solars prodding, finished up the remaining bits for ROOT support.

* resolver traceback for if a requested atom is already known as insoluable.
  Thanks to kojiro for spotting it.

* misc bash code cleanup.

* PATH protection has been loosened slightly to enable 'weird' eclasses that
  are doing global PATH mangling.

* $HOME location for building was shifted into the targeted packages 
  directory, rather then a shared within $PORTAGE_TMPDIR.

* setgid/setuid triggers now match portage behaviour; -s,o-w mode change.

* trigger warnings are now enabled.

* New default trigger added; CommonDirectoryModes, checks for common
  directories (/usr, /etc, /usr/bin, /usr/lib for example) in the merge set,
  checking the packages specified modes for them.  If not 0755, throws a 
  warning.

* For directory on directory merging, ensure_perms (default op) was changed
  to preserve the existing directories permissions.  Generally speaking, this